# ese_2024

./: README.md
configs/: fsl-ls1028a-rdb.dtb  interfaces  switch-config.sh
elbe_files/: 00_first_image_nrt.xml  01_first_image_rt.xml  02_first_image_minbase.xml  03_minbase_rt.xml  04_minbase_rt_cpuset.xml  05_minbase_rt_bridge_setup.xml  06_minbase_rt_bridged_endpoint.xml
tsn_poc/: .gitignore  CMakeLists.txt  Readme.md  Stream.hpp  main.cpp  rt_utils.hpp
tsn_poc/doc/: TsnDataConcept.md
